--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.2.3",
+    "events": "^3.3.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --sass",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.62.1"
+    "sass-loader": "^13.2.2"
   }
 }
