--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.2.3",
     "events": "^3.3.0",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -51,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "tailwindcss": "^3.3.1"
   }
 }
